--- a/_posts/2018-07-30-EZ-S.md
+++ b/_posts/2018-07-30-EZ-S.md
@@ -2,15 +2,18 @@
 layout: post
 title: (discontinued) Run a green-badge local HTTPS server with zero configuration
 description: No certificate creation, no tunnels and no hassle ⚡️
+type: tech
 ---
 
 ⚠️ Apparently, this goes against letsencrypt’s ToS and I can’t use their certificates in such manner. And I have to drop this tool. I would have issued a non-free certificate to keep this tool up, but it doesn’t sound like a great idea to publish a private key that is officially registered to my name.
 
 ## The importance of using HTTPS locally
 
-One might assume that HTTPS isn’t needed for local development. But that’s not always the case. You need to test for mixed-content, secure cookies, service workers, etc. This thread by [Kyle](https://twitter.com/getify) makes the point perfectly.
+One might assume that HTTPS isn’t needed for local development. But that’s not always the case. You need to test for mixed-content, secure cookies, service workers, etc. [This thread](https://twitter.com/getify/status/1023202051902373888) by [Kyle](https://twitter.com/getify) makes the point perfectly.
 
-{% twitter https://twitter.com/getify/status/1023202051902373888 %}
+![]({{ site.baseurl }}/images/postsImages/kyleTweet.png)
+
+---
 
 Running a local HTTPS server can be pain in the neck. You have to create your own certificates, add them as trusted etc. You know the deal.
 
@@ -23,12 +26,12 @@ But what if you could use a static, short and memorable URL to access your app w
 It’s a fork of [zeit/serve](https://github.com/zeit/serve) that gives you the ability to locally run a green-badge HTTPS server. You can see it on GitHub [here](https://github.com/alshakero/ez-s).
 
 ## Quick steps
+```sh
+$ npm i -g @alshakero/ez-s
+$ ez-s
 
-    $ npm i -g @alshakero/ez-s
-    $ ez-s
-
-    // => go to [https://ez-s.io](https://ez-s.io):5000 to see your app
-
+// => go to [https://ez-s.io](https://ez-s.io):5000 to see your app
+```
 ## How does it works?
 
 1. The domain ez-s.io has a single A DNS record pointing to the IP address 127.0.0.1.
