--- a/_posts/2018-07-30-EZ-S.md
+++ b/_posts/2018-07-30-EZ-S.md
@@ -3,7 +3,9 @@ layout: post
 title: (discontinued) Run a green-badge local HTTPS server with zero configuration
 description: No certificate creation, no tunnels and no hassle ⚡️
 type: tech
+opengraphImage: /images/postsImages/ez-s.jpg
 ---
+![]({{ site.baseurl }}/images/postsImages/ez-s.jpg)
 
 ⚠️ Apparently, this goes against letsencrypt’s ToS and I can’t use their certificates in such manner. And I have to drop this tool. I would have issued a non-free certificate to keep this tool up, but it doesn’t sound like a great idea to publish a private key that is officially registered to my name.
 
