Fix descriptions meta

--- a/_posts/2018-07-30-EZ-S.md
+++ b/_posts/2018-07-30-EZ-S.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: (discontinued) Run a green-badge local HTTPS server with zero configuration
-description: No certificate creation, no tunnels and no hassle ⚡️
+subtitle: No certificate creation, no tunnels and no hassle ⚡️
 type: tech
 opengraphImage: /images/postsImages/ez-s.jpg
 ---
