--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: On Lying
-description: If you think exercise is hard, try being honest
+subtitle: If you think exercise is hard, try being honest
 type: non-tech
 opengraphImage: /images/postsImages/pinocchio.jpg
 ---
