Fix typo in Lying post

--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -20,7 +20,7 @@ Neither the book nor the idea it represents is revolutionary, radical, or even n
 
 I did not learn much from this book. It was more of a wake-up call and a sobering slap across the face to rethink what most people and I already know about lying.
 
-In those ten months, I have developed mildly egocentric and fairly non-altruistic reasons to truthfulness. I'm training myself to viscerally understand that being honest is not charitable; rather, it's the best way to live a life. We studied the altruistic reasons for honesty for millennia are we parroted them ad nauseam. 
+In those ten months, I have developed mildly egocentric and fairly non-altruistic reasons for truthfulness. I'm training myself to viscerally understand that being honest is not charitable; rather, it's the best way to live a life. We studied the altruistic reasons for honesty for millennia are we parroted them ad nauseam. 
 
 In this essay, I'm sharing those non-altruistic reasons for honesty with you.
 
