Fix typo in Lying post

--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -104,7 +104,7 @@ Most of the time, we are indeed being nice. However, quite commonly we tend to b
 
 A white lie, in this case, is an entirely selfish cop-out. If you have your tendencies are own reasons to tell a white lie, you have to acknowledge that these are your tendencies and reasons, not the other person's. So is a white lie, told for your benefit and purposes, still a white lie?  
 
-Making the decision to lebel a lie as "white" is presumptuous. You presume that shielding the other person from the truth is better for them. 
+Making the decision to label a lie as "white" is presumptuous. You presume that shielding the other person from the truth is better for them. 
 
 To quote Harris:
 
