Fix typo in Lying post

--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -90,7 +90,7 @@ With honest feedback, you do not need a break up to hone your lover-skills. You'
 
 If you and your partner are sincere, you'd learn much more about yourself, them, and life. You would lose the silly questions to elicit compliments and praise when it is not real. You will build an authentic compliment-worthy self, and you will get all the compliments that, ironically, you do not need at this point.
 
-As the days go by, you life will converge to what your true self wants and I cannot begin to describe the amount of satisfaction that you get there.
+As the days go by, your life will converge with what your true self wants and I cannot begin to describe the amount of satisfaction you get there.
 
 Moreover, remember reason II; people like you are hard to come by, and that *is* sexy.
 
