--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -102,7 +102,7 @@ People often think a white lie is a charitable act of kindness. *"I am just bein
 
 Most of the time, we are indeed being nice. However, quite commonly we tend to be lazy and cowardly. Especially when the truth is bitter. We often obey the brilliant lying-monster urging us to tell a *white* lie such as *"You look fantastic!*" when the person does not. We follow this monster to avoid the discomfort and the possible harsh comeback from the other person when the truth is distasteful.
 
-A white lie, in this case, is an entirely selfish cop-out. If you have your tendencies are own reasons to tell a white lie, you have to acknowledge that these are your tendencies and reasons, not the other person's. So is a white lie, told for your benefit and purposes, still a white lie?  
+A white lie, in this case, is an entirely selfish cop-out. If you have your own tendencies and reasons to tell a white lie, you have to acknowledge that these are your tendencies and reasons, not the other person's. So is a white lie, told for your benefit and purposes, still a white lie?  
 
 Making the decision to label a lie as "white" is presumptuous. You presume that shielding the other person from the truth is better for them. 
 
