Expand on the car analogy in Lying

--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -55,7 +55,7 @@ Untruthfulness to oneself is like losing focus while meditating. It happens and 
 
 ![special]({{ site.baseurl }}/images/postsImages/special.jpg)
 
-Just like when you buy a new car and miraculously it becomes the most popular car in your city. Optimizing for maximum honesty makes you more aware of people's lies. You will begin to notice that it is hard to find people who do not lie as a lifestyle. You'll start to see that telling the truth in a moment you are expected to lie is invigorating. The respect towards you will be instantly palpable, and others will take everything else you say far more seriously. 
+Just like when you buy a new car and miraculously it becomes the most popular car in the city, not because it became more popular, but because the sight of its type becomes a noticible phenomenon for you. Optimizing for maximum honesty makes you more aware of people's lies. You will begin to notice that it is hard to find people who do not lie as a lifestyle. You'll start to see that telling the truth in a moment you are expected to lie is invigorating. The respect towards you will be instantly palpable, and others will take everything else you say far more seriously. 
 
 Lying comes so natural to us that people treat it like the fear of death. Everyone is expected to fear death. However, every folklore has a form of art praising those who do not fear death.
 
