Remove article from target in Lying

--- a/_posts/2019-05-07-On-Lying.md
+++ b/_posts/2019-05-07-On-Lying.md
@@ -68,7 +68,7 @@ Telling the truth when it is shallowly expected to belittle you is an anti-patte
 
 Our professional skills are products that circle the market just like a bottle of shampoo. They offer some value to some entity, and we try to maximize the value itself and the compensation we get for it.
 
-Since your clientele is 100% humans, they're a target to the brilliant lying-monster in your head. If you could falsely convince someone that you are more valuable than you are, you are suddenly more valuable than you are! But only in a small world where only you and your victim live.
+Since your clientele is 100% humans, they're target to the brilliant lying-monster in your head. If you could falsely convince someone that you are more valuable than you are, you are suddenly more valuable than you are! But only in a small world where only you and your victim live.
 
 This reality creates a real quandary. It can be an actual decision in today's world whether to design a better house or build a better facade. It is challenging to strike a healthy balance between the two. Public relations is a multi-billion dollar industry.
 
