--- a/_posts/.2019-05-14-Shoe-Dog.md
+++ b/_posts/.2019-05-14-Shoe-Dog.md
@@ -8,6 +8,11 @@ opengraphImage: /images/postsImages/pinocchio.jpg
 ![Pinocchio]({{ site.baseurl }}/images/postsImages/pinocchio.jpg)
 *Art by Gabriele Dell'Otto*
 
-Last week, I finished *The Everything Store* by Brad Stone to fimilirize myself on Jeff Bezos's and Amazon's stories. I enjoyed the book. It was alright. However, there was an evident consistant theme in the whole book; I can't name the theme, but there was certainly a narritive that the story had to fit. I do not mean some sort of a conspiracy, rather, I mean the author had to build some outline and fit the stories into this outline.  
+Inspiring. Deep. Mindful. Rich. Genuine. Captiviating. Remarkably gripping for a story with its good ending evident on my own personal gym bag.
 
-*Let me may be learn some business lessons*, I said to myself when I decided to read this book. And
+Contemplating my career and approaching 30, I'm questioning a lot of things I identified with as a software developer. I spent my adult life repeating **I'm not good with people**, **oh, I'll never be a manager, I'm an engineer and only an engineer**, **I suck at negotationg for what I want**, **I'm happy to spend my life hacking around and solving problems**. But as I approach the tenth year of my career, I'm starting to believe that being self-critical without trying and failing is just counter-productive and lazy.
+
+So I started reading a
+
+
+
